styles.less - fixup, problem with missing border on narrow screens

--- a/_src/styles.less
+++ b/_src/styles.less
@@ -23,7 +23,6 @@ body,
 .container {
   font-size: 2vh;
   height: 100%;
-  width: 100%;
   .sans-font;
 }
 
@@ -41,6 +40,7 @@ h1 {
   align-items: left;
   justify-content: flex-start;
   margin: 0rem auto;
+  padding: 0 2rem;
   max-width: 50em;
   text-align: justify;
 
